<resources>
    <string name="app_name">Cue Cards</string>
    <string name="ok">OK</string>
    <string name="home">Home</string>
    <string name="play">Play</string>
    <string name="library">Library</string>
    <string name="book">Book</string>
    <string name="person">Personal</string>
    <string name="games">Games</string>
    <string name="add_new_word">ADD NEW WORD</string>
    <string name="search">Search</string>
    <string name="my_book">My Book</string>
    <string name="enter_new_word">Enter New Word</string>
    <string name="add_translate">add translate</string>
    <string name="enter_translate">Enter Translate</string>
    <string name="description">Description</string>
    <string name="remove">remove</string>
    <string name="create">create</string>
    <string name="etymologies">Etymologies:</string>
    <string name="enter_new_phrase">Enter new phrase</string>
    <string name="phrase_label">Phrases:</string>
    <string name="translate">Translate:</string>
    <string name="yes_or_no">YES or NO</string>
    <string name="time">Time:</string>
    <string name="answers">Answers:</string>
    <string name="answer">Answer:</string>
    <string name="your_book_is_empty">Your book is empty</string>
    <string name="your_answer">Your answer</string>
    <string name="game_list">Game List</string>
    <string name="your_book">Your Book</string>
    <string name="List_empty">List is empty</string>
    <string name="cards">Cards</string>
    <string name="enter_definition">Enter Definition</string>
    <string name="new_card">New Card</string>
    <string name="editor">Editor</string>
    <string name="definition">Definition</string>
    <string name="phrase2">Phrase</string>
    <string name="languages">Languages</string>
    <string name="record">Record</string>
    <string name="crop_picture">Crop picture</string>
    <string name="edit_card">Edit Card</string>
    <string name="edit_phrase">Edit Phrase</string>
    <string name="choose_card">Choose Card</string>
    <string name="your_cards">Your Cards</string>
    <string name="first">First</string>
    <string name="second">Second</string>
    <string name="reason">Reason</string>
    <string name="image">image</string>
    <string name="your_library">Your Library</string>
    <string name="accept">accept</string>
    <string name="close">close</string>
    <string name="module_name">Module name</string>
    <string name="edit_module">Edit Module</string>
    <string name="count_items">||COUNT|| items</string>
    <string name="new_phrase">New Phrase</string>
    <string name="synchronize">synchronize</string>
    <string name="statistic">Statistic</string>
    <string name="cards_label">Cards:</string>
    <string name="modules_label">Modules:</string>
    <string name="label_module">Module:</string>
    <string name="modules">Modules</string>
    <string name="data_statistic">Data Statistic</string>
    <string name="game_statistic">Game Statistic</string>
    <string name="yes_or_no_game_count">Yes or no games count:</string>
    <string name="let_s_start">Let\'s Start</string>
    <string name="we_need_a_little_information_about_you">We need a little information about you.</string>
    <string name="how_are_we_should_call_you">What should we call you?</string>
    <string name="user_name">User Name</string>
    <string name="user_name_label">User Name:</string>
    <string name="what_are_you_from">What is your home country?</string>
    <string name="click_here">Click here</string>
    <string name="end">end</string>
    <string name="load">LOAD</string>
    <string name="disconnected">Disconnected</string>
    <string name="connected">Connected</string>
    <string name="selected_module">Selected Module</string>
    <string name="all_cards">All Cards</string>
    <string name="label_recommend">Recommend</string>
    <string name="see_all">See All</string>
    <string name="setting">Setting</string>
    <string name="log_in">Log in:</string>
    <string name="log_out">Log out:</string>
    <string name="clean">Clean</string>
    <string name="about_program">About program:</string>
    <string name="version">version || V ||</string>
    <string name="label_text">Text:</string>
    <string name="label_country">Country:</string>
    <string name="label_language">Language:</string>
    <string name="label_all">All</string>
    <string name="new_report">New Report</string>
    <string name="report">Report</string>
    <string name="message">Message</string>
    <string name="phrase_id">Phrase ID:</string>
    <string name="card_id">Card ID:</string>
    <string name="module_id">Module ID:</string>
    <string name="agree_with">Agree with</string>
    <string name="file_policy">policy-gb</string>
    <string name="privacy_and_policy">Privacy policy?</string>
    <string name="label_privacy_policy">Privacy policy</string>
    <string name="file_terms">terms-gb</string>
    <string name="label_terms_of_service">Terms of service</string>
    <string name="notification_privacy_changed">If you see this notice, it means that we have changed our privacy policy or terms. We recommend to read.</string>
    <string name="notice_share">If you see this notification, you are about to share your content. Related content will also be sent.</string>
    <string name="dont_show">Don\'t show again</string>
    <string name="label_status">Status:</string>
    <string name="status_ready">Ready</string>
    <string name="status_record_sp">Recording ||TIME||s / 60s</string>
    <string name="status_recorded">Recorded</string>
    <string name="status_working">WORKING</string>
    <string name="status_stopped">STOPPED</string>
    <string name="press_to_record">Press to record</string>
    <string name="click_to_stop">Click to stop</string>
    <string name="first_phrase">First phrase</string>
    <string name="fist_suggestion">Click to select the first phrase of future card</string>
    <string name="second_phrase">Second phrase</string>
    <string name="second_suggestion">Click to select the second phrase of future card</string>
    <string name="topic">Topic</string>
    <string name="list">List</string>
    <string name="your_phrases">Your phrases</string>
    <string name="choose_phrase">Choose phrase</string>
    <string name="press_to_save">Press to save</string>
    <string name="press_to_delete">Press to delete</string>
    <string name="press_to_remove">Press to remove</string>
    <string name="press_to_clear">Press to clear</string>
    <string name="label_screen_theme">Theme:</string>
    <string name="screen_theme_system">SYSTEM THEME</string>
    <string name="screen_theme_day">LIGHT THEM</string>
    <string name="screen_theme_dark">DARK THEM</string>
    <string name="themes">Themes</string>
    <string name="clue">Clue</string>
    <string name="label_clue">Clue:</string>
    <string name="single_card">Single Card</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="read">Read</string>
    <string name="label_count">Count:</string>
    <string name="read_cards">Read cards</string>
    <string name="crop">CROP</string>
    <string name="notification">Notification</string>
    <string name="start">START</string>
    <string name="stop">STOP</string>
    <string name="label_prepare_module">Prepare module:</string>
    <string name="turn_over">TURN OVER</string>
    <string name="newest">newest</string>
    <string name="country">country</string>
    <string name="language">language</string>
    <string name="favorite">favorite</string>
    <string name="label_free_cards">Free Cards:</string>
    <string name="label_free_phrases">Free Phrases:</string>
    <string name="label_clear_free_phrases">Clear free phrases:</string>
    <string name="label_clear_free_cards">Clear free cards:</string>
    <string name="label_wrong_answers">Wrong answers:</string>
    <string name="module_name_error_empty">Module name must not be empty</string>
    <string name="result">Result</string>
</resources>