<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="13dp"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/themes"
        android:textAppearance="?attr/textAppearanceBody1"
        android:textSize="@dimen/body1" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/btn_system"
        style="@style/Theme.RememberCards.CardView.Button.Icon"
        android:layout_width="match_parent"
        android:layout_margin="0dp"
        app:contentPadding="13dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/screen_theme_system"
            android:textSize="@dimen/body2" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/btn_day"
        style="@style/Theme.RememberCards.CardView.Button.Icon"
        android:layout_margin="0dp"
        app:contentPadding="13dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/screen_theme_day"
            android:textSize="@dimen/body2" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/btn_night"
        style="@style/Theme.RememberCards.CardView.Button.Icon"
        android:layout_width="match_parent"
        android:layout_margin="0dp"
        app:contentPadding="13dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/screen_theme_dark"
            android:textSize="@dimen/body2" />
    </com.google.android.material.card.MaterialCardView>

</LinearLayout>