<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<androidx.constraintlayout.widget.ConstraintLayout
		android:id="@+id/top_bar"
		style="@style/Theme.RememberCards.AppBar"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true"
		app:layout_constraintBaseline_toTopOf="parent">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="13dp"
			android:text="@string/let_s_start"
			android:textAppearance="?attr/textAppearanceHeadline6"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

		<com.google.android.material.divider.MaterialDivider
			android:id="@+id/bottom_divider"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			app:layout_constraintBottom_toBottomOf="parent" />

	</androidx.constraintlayout.widget.ConstraintLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:padding="13dp"
		app:layout_constraintTop_toBottomOf="@id/top_bar">

		<TextView

			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:text="@string/we_need_a_little_information_about_you"
			android:textAppearance="?attr/textAppearanceBody1" />


		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="50dp"
			android:text="@string/how_are_we_should_call_you"
			android:textAppearance="?attr/textAppearanceBody2"
			android:textColor="?attr/colorControlNormal" />

		<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/til_name"
			style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="13dp"
			android:hint="@string/user_name"
			app:counterEnabled="true"
			app:counterMaxLength="30"
			app:endIconMode="clear_text"
			app:expandedHintEnabled="false">

			<com.google.android.material.textfield.TextInputEditText
				android:layout_width="match_parent"
				android:layout_height="wrap_content" />

		</com.google.android.material.textfield.TextInputLayout>

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="50dp"
			android:text="@string/what_are_you_from" />

		<com.google.android.material.card.MaterialCardView
			android:id="@+id/btn_choice_language"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginStart="2dp"
			android:layout_marginTop="13dp"
			android:layout_marginEnd="2dp"
			android:layout_marginBottom="2dp"
			android:clickable="true"
			app:cardElevation="2dp"
			app:contentPadding="7dp">

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:orientation="vertical">

				<androidx.constraintlayout.widget.ConstraintLayout
					android:id="@+id/cl_language_empty"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:minHeight="31dp"
					android:visibility="visible">

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/click_here"
						app:layout_constraintBottom_toBottomOf="parent"
						app:layout_constraintEnd_toEndOf="parent"
						app:layout_constraintStart_toStartOf="parent"
						app:layout_constraintTop_toTopOf="parent" />
				</androidx.constraintlayout.widget.ConstraintLayout>

				<RelativeLayout
					android:id="@+id/rl_language_not_empty"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:visibility="gone">

					<com.google.android.material.card.MaterialCardView
						android:id="@+id/mcv_flag"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_margin="7dp"
						app:strokeColor="?attr/colorControlNormal"
						app:strokeWidth="1dp">

						<ImageView
							android:id="@+id/img_flag"
							android:layout_width="80dp"
							android:layout_height="wrap_content"
							android:adjustViewBounds="true"
							tools:src="@drawable/ic_flag_by" />

					</com.google.android.material.card.MaterialCardView>

					<LinearLayout
						android:id="@+id/ll_languages"
						android:layout_width="0dp"
						android:layout_height="wrap_content"
						android:layout_alignParentEnd="true"
						android:layout_marginStart="7dp"
						android:layout_toEndOf="@id/mcv_flag"
						android:orientation="vertical">

					</LinearLayout>

				</RelativeLayout>
			</LinearLayout>

		</com.google.android.material.card.MaterialCardView>

		<com.google.android.material.card.MaterialCardView
			android:id="@+id/btn_end"
			android:layout_width="80dp"
			android:layout_height="35dp"
			android:layout_gravity="end"
			android:layout_marginStart="2dp"
			android:layout_marginTop="50dp"
			android:layout_marginEnd="2dp"
			android:layout_marginBottom="2dp"
			app:cardElevation="2dp"
			app:contentPadding="7dp">

			<TextView
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:gravity="center"
				android:text="@string/end"
				android:textAppearance="?attr/textAppearanceButton"
				android:textColor="?attr/colorControlNormal" />

		</com.google.android.material.card.MaterialCardView>


	</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>