<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:padding="7dp">

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/til_text"
		style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:hint="@string/module_name"
		app:expandedHintEnabled="false"
		app:layout_constraintTop_toTopOf="parent">

		<com.google.android.material.textfield.TextInputEditText
			android:layout_width="match_parent"
			android:layout_height="match_parent" />

	</com.google.android.material.textfield.TextInputLayout>

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="7dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toBottomOf="@id/til_text">

		<com.google.android.material.card.MaterialCardView
			android:id="@+id/btn_close"
			style="@style/Theme.RememberCards.CardView.Button.Icon"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textColor="?attr/colorPrimary"
				android:text="@string/close"
				android:textAppearance="?textAppearanceButton" />

		</com.google.android.material.card.MaterialCardView>

		<com.google.android.material.card.MaterialCardView
			android:id="@+id/btn_accept"
			style="@style/Theme.RememberCards.CardView.Button.Icon"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/accept"
				android:textAppearance="?textAppearanceButton"
				android:textColor="?attr/colorPrimary" />

		</com.google.android.material.card.MaterialCardView>


	</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>